# seL4-MirageOS-PoC

./: .gitignore  .gitmodules  Cargo.nix  Cargo.toml  LICENSE  Makefile  README.md  demo.system  rust-toolchain.toml  rustfmt.toml  test.py
crates/demo/pds/demo-mirage-unikernel/: Cargo.nix  Cargo.toml
crates/demo/pds/demo-mirage-unikernel/core/: Cargo.nix  Cargo.toml  build.rs
crates/demo/pds/demo-mirage-unikernel/core/c/: costubs.c  sigsetjmp.c  stubs.c
crates/demo/pds/demo-mirage-unikernel/core/helpers/: Cargo.nix  Cargo.toml
crates/demo/pds/demo-mirage-unikernel/core/helpers/src/: lib.rs
crates/demo/pds/demo-mirage-unikernel/core/src/: lib.rs  syscall.rs  time_hack.rs
crates/demo/pds/demo-mirage-unikernel/src/: config.rs  main.rs
crates/demo/pds/sp804-driver/: Cargo.nix  Cargo.toml
crates/demo/pds/virtio-net-driver/: Cargo.nix  Cargo.toml
crates/demo/pds/virtio-net-driver/src/: main.rs
crates/sel4-linux-syscall/musl/: Cargo.nix  Cargo.toml
crates/sel4-linux-syscall/types/: Cargo.nix  Cargo.toml
crates/sel4-mirage/core/: Cargo.nix  Cargo.toml
crates/sel4-mirage/core/src/: ocaml.rs
hacking/cargo-manifest-management/: .gitignore  Makefile  default.nix
nix/: default.nix
nix/overlay/: default.nix
nix/scope/: crates.nix  default.nix  musl-for-mirage.nix  musl.nix
nix/scope/ocaml/: default.nix
nix/scope/ocaml/compiler/: default.nix
nix/scope/ocaml/mirage/: mirage-icecap.nix
nix/scope/ocaml/mirage/icecap-ocaml-runtime/: default.nix
nix/scope/ocaml/mirage/mk-mirage-library/: default.nix
nix/scope/stdenv/: default.nix
nix/scope/stdenv/libc-wrappers/: mirage.nix
nix/scope/world/: default.nix  ocaml.nix
nix/top-level/: default.nix
