[workspace]
default-members = []
resolver = "2"
members = [
    "crates/demo/pds/demo-mirage-unikernel",
    "crates/demo/pds/demo-mirage-unikernel/core",
    "crates/demo/pds/demo-mirage-unikernel/core/helpers",
    "crates/demo/pds/sp804-driver",
    "crates/demo/pds/virtio-net-driver",
    "crates/sel4-linux-syscall/musl",
    "crates/sel4-linux-syscall/types",
    "crates/sel4-mirage/core",
    "rust-sel4/crates/drivers/bcm2835-aux-uart",
    "rust-sel4/crates/drivers/pl011",
    "rust-sel4/crates/drivers/pl031",
    "rust-sel4/crates/drivers/sp804",
    "rust-sel4/crates/drivers/virtio/blk",
    "rust-sel4/crates/drivers/virtio/hal-impl",
    "rust-sel4/crates/drivers/virtio/net",
    "rust-sel4/crates/examples/microkit/banscii/pds/artist",
    "rust-sel4/crates/examples/microkit/banscii/pds/artist/interface-types",
    "rust-sel4/crates/examples/microkit/banscii/pds/assistant",
    "rust-sel4/crates/examples/microkit/banscii/pds/assistant/core",
    "rust-sel4/crates/examples/microkit/banscii/pds/assistant/core/test",
    "rust-sel4/crates/examples/microkit/banscii/pds/serial-driver",
    "rust-sel4/crates/examples/microkit/hello/pds/hello",
    "rust-sel4/crates/examples/microkit/http-server/pds/pl031-driver",
    "rust-sel4/crates/examples/microkit/http-server/pds/server",
    "rust-sel4/crates/examples/microkit/http-server/pds/server/core",
    "rust-sel4/crates/examples/microkit/http-server/pds/sp804-driver",
    "rust-sel4/crates/examples/microkit/http-server/pds/virtio-blk-driver",
    "rust-sel4/crates/examples/microkit/http-server/pds/virtio-net-driver",
    "rust-sel4/crates/examples/root-task/example-root-task",
    "rust-sel4/crates/examples/root-task/example-root-task-without-runtime",
    "rust-sel4/crates/examples/root-task/hello",
    "rust-sel4/crates/examples/root-task/serial-device",
    "rust-sel4/crates/examples/root-task/spawn-task",
    "rust-sel4/crates/examples/root-task/spawn-task/child",
    "rust-sel4/crates/examples/root-task/spawn-thread",
    "rust-sel4/crates/private/meta",
    "rust-sel4/crates/private/support/sel4-simple-task/config-types",
    "rust-sel4/crates/private/support/sel4-simple-task/rpc",
    "rust-sel4/crates/private/support/sel4-simple-task/runtime",
    "rust-sel4/crates/private/support/sel4-simple-task/runtime/config/cli",
    "rust-sel4/crates/private/support/sel4-simple-task/runtime/config/types",
    "rust-sel4/crates/private/support/sel4-simple-task/runtime/macros",
    "rust-sel4/crates/private/support/sel4-simple-task/threading",
    "rust-sel4/crates/private/tests/capdl/threads/components/test",
    "rust-sel4/crates/private/tests/capdl/utcover/components/test",
    "rust-sel4/crates/private/tests/microkit/passive-server-with-deferred-action/pds/client",
    "rust-sel4/crates/private/tests/microkit/passive-server-with-deferred-action/pds/server",
    "rust-sel4/crates/private/tests/microkit/reset",
    "rust-sel4/crates/private/tests/root-task/backtrace",
    "rust-sel4/crates/private/tests/root-task/c",
    "rust-sel4/crates/private/tests/root-task/config",
    "rust-sel4/crates/private/tests/root-task/dafny/core",
    "rust-sel4/crates/private/tests/root-task/dafny/task",
    "rust-sel4/crates/private/tests/root-task/default-test-harness",
    "rust-sel4/crates/private/tests/root-task/loader",
    "rust-sel4/crates/private/tests/root-task/panicking",
    "rust-sel4/crates/private/tests/root-task/ring-test-harness",
    "rust-sel4/crates/private/tests/root-task/tls",
    "rust-sel4/crates/private/tests/root-task/verus/core",
    "rust-sel4/crates/private/tests/root-task/verus/task",
    "rust-sel4/crates/sel4",
    "rust-sel4/crates/sel4-abstract-rc",
    "rust-sel4/crates/sel4-async/block-io",
    "rust-sel4/crates/sel4-async/block-io/fat",
    "rust-sel4/crates/sel4-async/io",
    "rust-sel4/crates/sel4-async/network",
    "rust-sel4/crates/sel4-async/network/rustls",
    "rust-sel4/crates/sel4-async/network/rustls/utils",
    "rust-sel4/crates/sel4-async/single-threaded-executor",
    "rust-sel4/crates/sel4-async/time",
    "rust-sel4/crates/sel4-async/unsync",
    "rust-sel4/crates/sel4-atomic-ptr",
    "rust-sel4/crates/sel4-backtrace",
    "rust-sel4/crates/sel4-backtrace/addr2line-context-helper",
    "rust-sel4/crates/sel4-backtrace/cli",
    "rust-sel4/crates/sel4-backtrace/embedded-debug-info",
    "rust-sel4/crates/sel4-backtrace/embedded-debug-info/cli",
    "rust-sel4/crates/sel4-backtrace/simple",
    "rust-sel4/crates/sel4-backtrace/types",
    "rust-sel4/crates/sel4-bounce-buffer-allocator",
    "rust-sel4/crates/sel4-capdl-initializer",
    "rust-sel4/crates/sel4-capdl-initializer/add-spec",
    "rust-sel4/crates/sel4-capdl-initializer/core",
    "rust-sel4/crates/sel4-capdl-initializer/embed-spec",
    "rust-sel4/crates/sel4-capdl-initializer/types",
    "rust-sel4/crates/sel4-capdl-initializer/types/derive",
    "rust-sel4/crates/sel4-capdl-initializer/with-embedded-spec",
    "rust-sel4/crates/sel4-capdl-initializer/with-embedded-spec/build-env",
    "rust-sel4/crates/sel4-capdl-initializer/with-embedded-spec/embedded-spec",
    "rust-sel4/crates/sel4-capdl-initializer/with-embedded-spec/embedded-spec/validate",
    "rust-sel4/crates/sel4-dlmalloc",
    "rust-sel4/crates/sel4-driver-interfaces",
    "rust-sel4/crates/sel4-elf-header",
    "rust-sel4/crates/sel4-externally-shared",
    "rust-sel4/crates/sel4-generate-target-specs",
    "rust-sel4/crates/sel4-immediate-sync-once-cell",
    "rust-sel4/crates/sel4-immutable-cell",
    "rust-sel4/crates/sel4-initialize-tls",
    "rust-sel4/crates/sel4-kernel-loader",
    "rust-sel4/crates/sel4-kernel-loader/add-payload",
    "rust-sel4/crates/sel4-kernel-loader/config-types",
    "rust-sel4/crates/sel4-kernel-loader/embed-page-tables",
    "rust-sel4/crates/sel4-kernel-loader/embed-page-tables/runtime",
    "rust-sel4/crates/sel4-kernel-loader/payload-types",
    "rust-sel4/crates/sel4-logging",
    "rust-sel4/crates/sel4-microkit",
    "rust-sel4/crates/sel4-microkit/base",
    "rust-sel4/crates/sel4-microkit/driver-adapters",
    "rust-sel4/crates/sel4-microkit/macros",
    "rust-sel4/crates/sel4-microkit/message",
    "rust-sel4/crates/sel4-microkit/message/types",
    "rust-sel4/crates/sel4-mod-in-out-dir",
    "rust-sel4/crates/sel4-newlib",
    "rust-sel4/crates/sel4-one-ref-cell",
    "rust-sel4/crates/sel4-panicking",
    "rust-sel4/crates/sel4-panicking/env",
    "rust-sel4/crates/sel4-platform-info",
    "rust-sel4/crates/sel4-platform-info/types",
    "rust-sel4/crates/sel4-reset",
    "rust-sel4/crates/sel4-reset/cli",
    "rust-sel4/crates/sel4-root-task",
    "rust-sel4/crates/sel4-root-task/default-test-harness",
    "rust-sel4/crates/sel4-root-task/macros",
    "rust-sel4/crates/sel4-runtime-common",
    "rust-sel4/crates/sel4-rustfmt-helper",
    "rust-sel4/crates/sel4-shared-ring-buffer",
    "rust-sel4/crates/sel4-shared-ring-buffer/block-io",
    "rust-sel4/crates/sel4-shared-ring-buffer/block-io/types",
    "rust-sel4/crates/sel4-shared-ring-buffer/bookkeeping",
    "rust-sel4/crates/sel4-shared-ring-buffer/smoltcp",
    "rust-sel4/crates/sel4-stack",
    "rust-sel4/crates/sel4-sync",
    "rust-sel4/crates/sel4-sync/trivial",
    "rust-sel4/crates/sel4-synthetic-elf",
    "rust-sel4/crates/sel4-test-harness",
    "rust-sel4/crates/sel4/bitfield-ops",
    "rust-sel4/crates/sel4/bitfield-parser",
    "rust-sel4/crates/sel4/bitfield-parser/test",
    "rust-sel4/crates/sel4/build-env",
    "rust-sel4/crates/sel4/config",
    "rust-sel4/crates/sel4/config/data",
    "rust-sel4/crates/sel4/config/generic",
    "rust-sel4/crates/sel4/config/generic/types",
    "rust-sel4/crates/sel4/config/macros",
    "rust-sel4/crates/sel4/sys",
]
